@@ -732,7 +732,7 @@
 - (NSString*)localizedMediaTimeDescription:(float)time
 {
     if (!isfinite(time))
-        return UI_STRING("indefinite time", "string for an indefinite movie time");
+        return UI_STRING("indefinite time", "accessibility help text for an indefinite media controller time value");
 
     int seconds = (int)fabsf(time); 
     int days = seconds / (60 * 60 * 24);
@@ -741,13 +741,13 @@
     seconds %= 60;
 
     if (days)
-        return [NSString stringWithFormat:UI_STRING("date.format.for.days", "string for days, hours, minutes & seconds"), days, hours, minutes, seconds];
+        return [NSString stringWithFormat:UI_STRING("%1$d days %2$d hours %3$d minutes %4$d seconds", "accessibility help text for media controller time value >= 1 day"), days, hours, minutes, seconds];
     else if (hours)
-        return [NSString stringWithFormat:UI_STRING("date.format.for.hours", "string for hours, minutes & seconds"), hours, minutes, seconds];
+        return [NSString stringWithFormat:UI_STRING("%1$d hours %2$d minutes %3$d seconds", "accessibility help text for media controller time value >= 60 minutes"), hours, minutes, seconds];
     else if (minutes)
-        return [NSString stringWithFormat:UI_STRING("date.format.for.minutes", "string for minutes & seconds"), minutes, seconds];
+        return [NSString stringWithFormat:UI_STRING("%1$d minutes %2$d seconds", "accessibility help text for media controller time value >= 60 seconds"), minutes, seconds];
 
-    return [NSString stringWithFormat:UI_STRING("date.format.for.seconds", "string for seconds"), seconds];
+    return [NSString stringWithFormat:UI_STRING("%1$d seconds", "accessibility help text for media controller time value < 60 seconds"), seconds];
 }
 
 @end
