@@ -1,3 +1,12 @@
+2009-11-02  Eric Carlson  <eric.carlson@apple.com>
+
+        Reviewed by John Sullivan and Mark Rowe.
+
+        <rdar://problem/7356733> Voiceover does not read correct media controller time values
+
+        * WebCoreSupport/WebViewFactory.mm:
+        (-[WebViewFactory localizedMediaTimeDescription:]):
+
 2009-11-02  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Anders Carlsson.
